@@ -2,6 +2,7 @@
  v2.1.1 (unreleased)
 ================================================================================
 Fixed: Export metadata variables (furl.__title__, furl.__version__, etc).
+Added: scheme, host, and netloc as parameters to furl.remove().
 
 ================================================================================
  v2.1.0
